Revision history for JSON-Schema-Modern

{{$NEXT}}

0.573     2023-10-21 23:49:03Z
          - fix construction of default values of some attributes e.g.
            media_types, encodings
          - fix list context of has_errors, error_count, annotation_count
            methods

0.572     2023-10-14 22:04:52Z
          - boost runtime performance by removing uses of MooX::HandlesVia

0.571     2023-09-17 01:14:47Z
          - removed duration and uuid formats for draft7 (they were not
            defined until the next spec version)
          - properly default format validation to true in draft7

0.570     2023-09-02 20:42:03Z
          - small performance improvements to 'date-time' and 'date' format
            validation
          - new stringy_numbers option, for validating numbers more loosely

0.569     2023-07-08 23:36:06Z
          - fixed some edge cases with ipv6 format validation

0.568     2023-06-17 07:16:54Z
          - add media-type support for application/x-ndjson and
            application/x-www-form-urlencoded

0.567     2023-06-03 22:11:23Z
          - vocabularies are now evaluated in a different order: Validation
            and Format vocabularies now come before Applicator, in order to
            allow faster short circuiting when errors are encountered.

0.566     2023-05-11 03:34:59Z
          - treat ambiguous types as a normal error, rather than an exception
            which may provide incorrect location data

0.565     2023-03-12 21:19:27Z
          - traverse and evaluate callbacks can now produce errors,
            which are incorporated into the overall evaluation results
          - fix bad handling of empty patterns in "pattern",
            "patternProperties" keywords

0.564     2023-03-04 00:43:42Z
          - further tweak performance by short-circuiting inside some
            subschemas (but not when annotations must be collected for
            "unevaluated" keywords)