@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - better detection of schema locations, for use by Document
+            subclasses
 
 0.573     2023-10-21 23:49:03Z
           - fix construction of default values of some attributes e.g.
